fix (blog): sort blog list by date, add spacing

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,3 +1,7 @@
 main {
   margin-top: 70px;
 }
+
+.margin-top {
+  margin-top: 16px;
+}
